--- a/Team.html
+++ b/Team.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8">
             <meta name="description" content="My Team Profile">   
             <meta name="keywords" content="My Team Profile">
-            <meta name="author" content="Cailin Bell Wold">
+            <meta name="author" content="Alice Waweru">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
             <!--Stylesheets-->
